--- a/index.html
+++ b/index.html
@@ -40,8 +40,37 @@
             <button1>Check out Our Service</button1>&nbsp;
             <button2>View Dental Portfolio</button2>
         </div>
-
-
+    </div>
+    <div class="content_slider">
+        <div class="bolum1">
+            <p>Experience </p>
+            <p>Dental Holiday!</p>
+        </div>
+        <div class="bolum2">
+            <div><img src=images/yuz-estetigi-1.png>
+                <p>Yüz Estetiği</p>
+            </div>
+            <hr class="solid">
+            <div>
+                <img src=images/burun-estetigi.png>
+                <p>Burun Estetiği</p>
+            </div>
+            <hr class="solid">
+            <div><img src=images/meme-estetigi.png>
+                <p>Meme Estetiği</p>
+            </div>
+            <hr class="solid">
+            <div><img src=images/vucut-estetigi.png>
+                <p>Vücut Estetiği</p>
+            </div>
+            <hr class="solid">
+            <div><img src=images/sac-ekimi-1.png>
+                <p>Saç Ekimi</p>
+            </div>
+        </div>
+        <div class="bolum3">
+            <button>Estetik Cerrahi</button>
+        </div>
     </div>
     <div class="content">
         <div class="icerik">
@@ -63,13 +92,13 @@
         </div>
         <div class="icerik1">
             <p> MEKANİK BUTON - PL50-P SERİSİ | İLX</p>
-            <img src="images/4.jpg">
+            <img src="images/3.jpg">
             <button5> 0 , 00 TL </button5>
             <button4>Sepete Ekle</button4>
         </div>
         <div class="icerik1">
             <p>LED İNDİKATÖR - V50 SERİSİ | İLX</p>
-            <img src="images/3.jpg">
+            <img src="images/4.jpg">
             <button5> 0 , 00 TL </button5>
             <button4>Sepete Ekle</button4>
         </div>
