--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
         <div class="bolum3">
             <button>Estetik Cerrahi</button>
         </div>
-        <div class="bolum4">
-            <button>Start Your Dental Travel</button>
+        <div class="mobil_buton">
+            <div class="bolum4">
+                <button>Start Your Dental Travel</button>
+            </div>
         </div>
+
     </div>
     <div class="content">
         <div class="icerik">
@@ -81,7 +84,7 @@
             <p>İNDİKATÖRLER</p>
             <button3>TÜMÜNÜNÜ GÖR</button3>
         </div>
-        <div class="icerik1">
+        <div class="icerik0">
             <p>İLX İL-XWLS-12-24 SERİSİ SLİM WARNİNG LİGHT</p>
             <img src="images/1.jpg">
             <button5> 0 , 00 TL </button5>
@@ -108,6 +111,9 @@
     </div>
     <div class="alt_alan">
         <div class="icerik2">
+            <div class="resim_mobil">
+                <img src="images/11111.png">
+            </div>
             <div class="metin">
                 <h3>Araştırma Süresi</h3>
                 <p>
